--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- add your code here -->
-	<input id=="newTodoInput"/>
+	<input id="newTodoInput"/>
 	<button id="addTodoBtn">Add todo</button>
 	<ol id="todoList"></ol>
 </body>
