--- a/main.html
+++ b/main.html
@@ -11,5 +11,6 @@
 	<input id="newTodoInput"/>
 	<button id="addTodoBtn">Add todo</button>
 	<ol id="todoList"></ol>
+	<script src="script.js"></script>
 </body>
 </html>
